--- a/public/css/user.css
+++ b/public/css/user.css
@@ -30,50 +30,15 @@ hr {
 
 /* Container */
 
-li {
-    list-style: none;
-}
 .container {
+    text-align: center;
+    color: white;
     margin-top: 75px;
-    margin-bottom: 150px;
-}
-.product-item {
-    background-color: #808000;
-    padding: 0 25px;
-    margin-top: 25px;
+    padding: 50px 0 50px 0;
     border: 5px black solid;
     border-radius: 15px;
+    background-color: #808000;
 }
-.product-name {
-    text-align: center;
-    padding: 10px;
-    color: white;
-    font-size: 24px;
-}
-.product-desc {
-    color: white;
-}
-.price {
-    margin-top: 10px;
-    color: crimson;
-    font-size: 20px;
-    margin-bottom: 10px;
-}
-.availability-yes {
-    margin-top: 10px;
-    color: green;
-    font-size: 20px;
-}
-.availability-no {
-    margin-top: 10px;
-    color: black;
-    font-size: 20px;
-}
-.btn {
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
 /* Footer */
 
 .footer {
