--- a/public/css/basket.css
+++ b/public/css/basket.css
@@ -25,57 +25,110 @@
 hr {
     height: 5px;
     background-color: black;
-    margin: 0 0 30px 0;
+    margin: 0;
 }
 
-/* Container */
-
+li {
+    list-style: none;
+}
 .container {
     margin-top: 75px;
     margin-bottom: 150px;
+}
+.product-img {
+    margin-top: 10px
+}
+
+.product-item {
     background-color: #808000;
     padding: 0 25px;
+    margin-top: 25px;
     border: 5px black solid;
     border-radius: 15px;
 }
-
-/* Form */
-
-.header {
+.product-name {
     text-align: center;
-    margin-top: 10px;
-}
-
-.product-img {
-    background-color: white;
-    border: black 5px solid;
-    border-radius: 15px;
-    height: 128px;
-    width: 128px;
-}
-.product-name  {
     padding: 10px;
     color: white;
     font-size: 24px;
 }
+.product-desc {
+    color: white;
+}
 .price {
-    text-align: center;
     margin-top: 10px;
     color: crimson;
-    font-size: 24px;
+    font-size: 20px;
     margin-bottom: 10px;
 }
-.between-items {
-    background-color: white;
-    height: 5px;
+.availability-yes {
+    margin-top: 10px;
+    color: green;
+    font-size: 20px;
+}
+.availability-no {
+    margin-top: 10px;
+    color: black;
+    font-size: 20px;
 }
 .btn {
-
-    margin: 0 10px 30px 0;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
-.btn-success {
+
+.notBox {
+    list-style-type: none;
+    background-color: olive;
+    margin: 30px;
+    padding: 30px;
+    border: black 5px solid;
+    border-radius: 45px;
+}
+
+.notMessage {
+    text-align: center
+}
+
+.product-item {
+    width: 100%;
     margin: 0;
 }
+
+.product {
+    list-style-type: none;
+}
+
+.header {
+    margin-bottom: 15px;
+}
+
+.form {
+    margin-top: 20px;
+    color: white;
+}
+
+.inputQty {
+    max-width: 100px
+}
+
+#qty {
+    color:white;
+}
+
+.totalPrice {
+    color: red;
+    margin: 15px 0;
+}
+
+.buttonBox {
+    width: 100%
+}
+
+.btnFunc {
+    width: 150px
+}
+
+
 
 /* Footer */
 
