--- a/public/css/login.css
+++ b/public/css/login.css
@@ -72,6 +72,28 @@ h1 {
     border-radius: 15px;
 }
 
+.applyLink {
+    text-decoration: none;
+    color: white
+}
+
+.message {
+    color: white;
+    margin-top: 10px
+}
+
+.loginedMess {
+    margin-top: 100px;
+}
+
+.toCab {
+    margin-top: 50px
+}
+
+.applyReg {
+    padding: 10px 75px 10px 75px
+}
+
 /* Footer */
 
 .footer {
