--- a/public/css/product.css
+++ b/public/css/product.css
@@ -93,6 +93,36 @@ hr {
     margin: 15px auto
 }
 
+.comment-item {
+    background-color: olive;
+    padding-top: 15px;
+    padding-left: 20px;
+    padding-right: 40px;
+    margin-top: 10px;
+    border: 5px black solid;
+    border-radius: 45px;
+}
+.comments {
+    /*background-color: black;*/
+    margin-bottom: 100px;
+}
+
+.name {
+    color: white;
+}
+
+.text {
+    color: white;
+    font-size: 20px;
+    padding-left: 15px;
+    padding-top: 10px;
+    max-width: 850px;
+}
+
+.date {
+    color: white;
+}
+
 /* Footer */
 
 .footer {
